service-api.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: nginx-ingress
 namespace: ssl-example
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - secretName: example-service-tls
    hosts:
      - my-example.com
  ingressClassName: nginx
  rules:
  - host: my-example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: example-service
            port:
              number: 8080
